<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_schedule_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dt11.student16.smartfan.ScheduleEditorActivity">

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_menu_revert"
        android:drawablePadding="6dp"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/returnButton" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnReturn"
        android:columnCount="2"
        android:rowCount="8">
        <TextView
            android:id="@+id/textStartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTime"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:paddingTop="10dp" />
        <TextView
            android:id="@+id/textEndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTime"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:paddingTop="10dp" />
        <TextView
            android:id="@+id/textStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="08:00"
            android:textSize="@dimen/schedule_editor_time_text_size"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="start" />
        <TextView
            android:id="@+id/textEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="09:00"
            android:textSize="@dimen/schedule_editor_time_text_size"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="start" />
        <TextView
            android:id="@+id/textSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedText"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            android:paddingTop="10dp" />
        <SeekBar
            android:id="@+id/seekSpeedSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/scale49"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:paddingTop="10dp"/>
        <TextView
            android:id="@+id/textDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directionText"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            android:paddingTop="10dp" />
        <RadioGroup
            android:id="@+id/rdoGrpDirection"
            android:layout_rowSpan="1"
            android:layout_columnSpan="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingTop="10dp">
            <RadioButton
                android:id="@+id/rdoCW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:layout_weight="1"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rdoCCW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reverse"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:id="@+id/textDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daysText"
            android:layout_rowWeight="1"
            android:layout_columnWeight="2"
            android:paddingTop="10dp" />
        <LinearLayout
            android:id="@+id/layoutChkDays"
            android:layout_rowSpan="1"
            android:layout_columnSpan="2"
            android:paddingTop="6dp">
            <CheckBox
                android:id="@+id/chkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sundayTwoLetter" />
            <CheckBox
                android:id="@+id/chkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mondayTwoLetter" />
            <CheckBox
                android:id="@+id/chkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesdayTwoLetter" />
            <CheckBox
                android:id="@+id/chkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesdayTwoLetter" />
            <CheckBox
                android:id="@+id/chkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursdayTwoLetter" />
            <CheckBox
                android:id="@+id/chkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fridayTwoLetter" />
            <CheckBox
                android:id="@+id/chkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturdayTwoLetter" />
        </LinearLayout>
    </GridLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btnSave">
    </Button>

    <!--<TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeStart"
        android:timePickerMode="clock">
    </TimePicker>-->

    <!--Schedule_Id, Begin_Time, End_Time, Direction, Fan_Speed, Day, Enabled-->

</RelativeLayout>
