<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dt11.student16.smartfan.ManualActivity">

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_menu_revert"
        android:drawablePadding="6dp"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/returnButton" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:layout_below="@+id/btnReturn"
        android:layout_above="@+id/layoutButtons"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/textDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directionText"
            android:textSize="@dimen/standard_text_size"/>

        <RadioGroup
            android:id="@+id/rdoGrpDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingTop="2dp">
            <RadioButton
                android:id="@+id/rdoCW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:textSize="@dimen/standard_text_size"/>
            <RadioButton
                android:id="@+id/rdoCCW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backward"
                android:textSize="@dimen/standard_text_size"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedText"
            android:textSize="@dimen/standard_text_size"
            android:paddingTop="10dp"/>

        <SeekBar
            android:id="@+id/seekSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumbTint="@color/colorAccent"
            android:paddingTop="10dp"
            android:max="@integer/scale49" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnUpdate" />
        <Button
            android:id="@+id/btnChangeMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnChangeMode" />
    </LinearLayout>



</RelativeLayout>
