<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_one_temp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dt11.student16.smartfan.OneTempActivity">


    <RelativeLayout
        android:id="@+id/layoutButtonsTop"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@android:drawable/ic_menu_revert"
            android:drawablePadding="6dp"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/returnButton" />

        <Button
            android:id="@+id/btnChangeMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnChangeMode"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:layout_below="@+id/layoutButtonsTop"
        android:layout_above="@+id/layoutButtons"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/textDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directionText"
            android:textSize="@dimen/standard_text_size"/>

        <RadioGroup
            android:id="@+id/rdoGrpDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingTop="2dp">
            <RadioButton
                android:id="@+id/rdoCW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:textSize="@dimen/standard_text_size"/>
            <RadioButton
                android:id="@+id/rdoCCW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backward"
                android:textSize="@dimen/standard_text_size"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedRangeText"
            android:textSize="@dimen/standard_text_size"
            android:paddingTop="10dp"/>

        <RelativeLayout
            android:id="@+id/layoutSpeedRange">
            <com.edmodo.rangebar.RangeBar
                android:id="@+id/rangeSpeedBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:thumbRadius="0dp"
                app:thumbColorNormal="@color/colorAccent"
                app:thumbColorPressed="@color/colorAccentDark"
                app:tickCount="47"
                app:tickHeight="0dp"
                app:barWeight="0dp"
                app:connectingLineColor="@color/colorBackgroundRangeBar" />

            <com.edmodo.rangebar.RangeBar
                android:id="@+id/rangeSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:thumbRadius="3dp"
                app:thumbColorNormal="@color/colorAccent"
                app:thumbColorPressed="@color/colorAccentDark"
                app:tickCount="47"
                app:tickHeight="0dp"
                app:barWeight="0dp"
                app:connectingLineColor="@color/colorAccent" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempRangeText"
            android:textSize="@dimen/standard_text_size"
            android:paddingTop="10dp"/>

        <GridLayout
            android:id="@+id/gridTempRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:rowCount="1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp">
            <TextView
                android:id="@+id/textLowTemp"
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:layout_height="wrap_content"
                android:text="@string/textLowTemp"
                android:textSize="@dimen/standard_text_size"
                android:layout_gravity="start"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editLowTemp"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:hint="@string/hintLowTemp"
                android:layout_columnWeight="1"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:inputType="number"
                android:textSize="@dimen/standard_text_size"
                android:layout_gravity="start"
                android:gravity="center"/>
            <TextView
                android:text="       "
                />
            <TextView
                android:id="@+id/textHighTemp"
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:layout_height="wrap_content"
                android:text="@string/textHighTemp"
                android:textSize="@dimen/standard_text_size"
                android:layout_gravity="start"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editHighTemp"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:hint="@string/hintHighTemp"
                android:layout_columnWeight="1"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:inputType="number"
                android:textSize="@dimen/standard_text_size"
                android:layout_gravity="start"
                android:gravity="center"/>
        </GridLayout>

    </GridLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnUpdate" />
    </LinearLayout>
</RelativeLayout>
